--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 fastapi = "^0.109.2"
 httpx = "^0.26.0"
 modconfig = "^1.2.1"
+uvicorn = {extras = ["standard"], version = "^0.27.1"}
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
